--- a/css/style - Copy.css
+++ b/css/style - Copy.css
@@ -110,7 +110,7 @@ body{
     position: relative;
 }
 .warp-content > .tab-content.flex{
-    margin-top: 40px;
+    margin-top: 50px;
 }
 .nopadding{
     padding: 0!important;
@@ -136,11 +136,11 @@ body{
     right: 30px;
 }
 .index-left{
-    margin-top: 85px;   
+    margin-top: 105px;   
 }
 .news-events.index-left,
 .corporate-tab.index-left{
-    margin-top: 40px;
+    margin-top: 60px;
 }
 .index-right{
     margin-top: 150px;
@@ -176,20 +176,44 @@ body{
 }
 /*==================================Workspace==================================*/
 .workspace{
-    margin-top: 80px;
+    margin-top: 100px;
 /*    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
 }
 .workspace li p{
     text-shadow: 0 1px 2px rgba(0,0,0,0.5);
-    font-size: .8em
+    font-size: .9em
 }
 .circle{
-    height: 125px;
+    height: 130px;
     text-align: center;
 }
-.circle-box{
+.circle a{
+    border: 1px solid #fff;
+    color: #fff;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    height: 75px;
+    width: 75px;
+    font-size: 30px;
+    line-height: 72px;
+    display: block;
+    margin: auto;
+    text-decoration: none;
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.5);
+    box-shadow: 0 0 4px rgba(0,0,0,0.5);
+    margin-bottom: 10px;
+     -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
     position: relative;
-    display: inline-block;
+}
+.contact-box:hover,
+.member-box:hover{
+    background: rgba(255,255,255,0.12);
+    -webkit-box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    cursor: pointer; 
+    -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
 }
 .noti{
     background: #1B3E93;
@@ -201,7 +225,6 @@ body{
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
 }
 /*==================================Corporate==================================*/
 .tab-pane img{
@@ -350,6 +373,10 @@ body{
     box-shadow: none;
     color: #fff;
 }
+#my-page .form-control:hover{
+    background: rgba(0,0,0,0.2);
+    z-index: 1
+}
 .my-page-profile span.glyphicon-user{
     width: 120px;
     height: 120px;
@@ -414,6 +441,11 @@ body{
     background: transparent;
     border: none;
     text-shadow: none;
+    -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
+}
+.html5buttons a:hover{
+    background: rgba(0, 0, 0, 0.25);
     -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out;
 }
@@ -628,6 +660,9 @@ body{
     -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out;
 }
+.directory .panel-heading:hover .panel-title a:first-child{
+    color: #19d873 !important;
+}
 .directory .panel-group .panel,
 .directory .panel-heading,
 .directory .panel-body{
@@ -646,6 +681,9 @@ body{
     padding: 15px 0;
     margin-bottom: 20px;
     min-height: 192px;
+}
+.contact-box:hover{
+    cursor: auto;
 }
 .contact-box h3{
     margin-top: 0;
@@ -666,6 +704,104 @@ body{
     line-height: 1em;
     text-align: center;
 }
+/*========================================*/
+.contact-icon{
+    text-align: center;
+    margin-top: 5px;
+}
+.contact-icon a {
+    display: inline-block;
+    font-size: 0px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+    background: rgba(255,255,255,0.1);
+	-webkit-transition: -webkit-transform ease-out 0.1s, background 0.2s;
+	-moz-transition: -moz-transform ease-out 0.1s, background 0.2s;
+	transition: transform ease-out 0.1s, background 0.2s;
+}
+.contact-icon a:after {
+    top: 0;
+    left: 0;
+    padding: 0;
+    z-index: -1;
+    box-shadow: 0 0 0 2px rgba(255,255,255,0.1);
+    opacity: 0;
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    content: '';
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+.contact-icon a:hover {
+	background: rgba(255,255,255,0.05);
+	-webkit-transform: scale(0.93);
+	-moz-transform: scale(0.93);
+	-ms-transform: scale(0.93);
+	transform: scale(0.93);
+	color: #fff;
+}
+.contact-icon a:hover:after {
+	-webkit-animation: sonarEffect 1.3s ease-out 75ms;
+	-moz-animation: sonarEffect 1.3s ease-out 75ms;
+	animation: sonarEffect 1.3s ease-out 75ms;
+}
+@-webkit-keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		-webkit-transform: scale(1.5);
+		opacity: 0;
+	}
+}
+@-moz-keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		-moz-transform: scale(1.5);
+		opacity: 0;
+	}
+}
+@keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		transform: scale(1.5);
+		opacity: 0;
+	}
+}
+/*========================================*/
 .contact-icon a .fa{
     font-size: 20px;
     line-height: 30px;
@@ -744,6 +880,11 @@ ul.result a{
 .member-box .contact-box{
     min-height: auto;
 }
+.member-box .contact-box:hover{
+    background: none;
+    box-shadow: none;
+    cursor: auto;
+}
 .member-box h4{
     padding-left: 2em;
 }
@@ -801,6 +942,166 @@ footer  a:after{
     position: fixed;
     right: 5%;
     left: 5%;
+}
+/*==================================Hover==================================*/
+.member-box > div,
+.btn,
+.nav-tabs li,
+.directory .panel-group .panel-heading,
+ul.result li,
+#menu-select-tab li,
+.topmenu li,
+.noti{
+    -webkit-transition: all .27s ease-in-out;
+     transition: all .27s ease-in-out;
+}
+.member-box > div{
+    margin-top: 2px;
+}
+/*************************************/
+.member-box > div:before,
+.nav-tabs li:before,
+.directory .panel-group .panel-heading:before,
+ul.result li:before,
+#menu-select-tab li:before,
+.topmenu li:before{
+   content: "";
+    width: 4px;
+    display: block;
+    height: 100%;
+    background: rgba(0 ,0 ,0 ,0.25);
+    position: absolute;
+    -webkit-transition: all .27s ease-in-out;
+     transition: all .27s ease-in-out;
+}
+.member-box > div:hover:before,
+.nav-tabs li:hover:before,/*******mytab-document nav**********/
+.nav-tabs li.active:before,/*******mytab-document nav**********/
+.directory .panel-group .panel-heading:hover:before,
+ul.result li:hover:before,
+#menu-select-tab li:hover:before,
+.topmenu li:hover:before,
+.sidebarleft-nav li:hover:before{
+     -webkit-transition: all .27s ease-in-out;
+     transition: all .27s ease-in-out;
+     width: 100%;
+}
+
+.directory .panel-group .panel-heading:before{
+    height: 40px;
+    z-index: -1;
+    left: 0;
+    margin-top: -12px;
+}
+ul.result li:before{
+    height: 27px;
+    z-index: -1;
+}
+/*************************************/
+.btn{
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+}
+.btn-mirror:before,
+.circle a:after{
+    content: "";
+	width: 100%;
+	height: 0;
+	top: 50%;
+	left: 50%;
+	background: #fff;
+	opacity: 0;
+    z-index: -1;
+    position: absolute;
+	-webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	-moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	-ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    -webkit-transition: all .27s ease-in-out;
+     transition: all .27s ease-in-out;
+}
+.btn-mirror:hover,
+.btn-mirror:active,
+.btn-mirror:focus,
+.btn-mirror:visited{
+	color: #888 !important;
+}
+.btn-mirror:hover:before {
+	height: 550%;
+	opacity: 1;
+}
+.btn-mirror.dropdown-toggle:hover:before {
+	height: 400%;
+}
+.btn-mirror:active:before {
+	height: 600%;
+	opacity: 1;
+}
+#loadMore:hover:before
+{
+    height: 200%;
+}
+.directory-select .btn-mirror:hover:before
+{
+    height: 175%;
+}
+.send-email:hover:before,
+.btn-request:hover:before{
+    height: 255%;
+}
+/*************************************/
+.circle a:after{
+    content: "";
+	width: 0;
+	height: 0;
+	background: rgba(255,255,255,0.12);
+    border-radius: 100%;
+}
+.circle a:hover{
+    -webkit-box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    -webkit-transition: all 1s ease-in-out;
+     transition: all 1s ease-in-out;
+}
+.circle a:hover .noti{
+    background: green;
+    -webkit-transition: all 1s ease-in-out;
+     transition: all 1s ease-in-out;
+}
+.circle a:hover:after{
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+/*************************************/
+#menu-select-tab li:before,
+.topmenu li:before{
+    width: 0;
+}
+#menu-select-tab .active,
+.topmenu .active{
+    background: rgba(0 ,0 ,0 ,0.25);
+}
+#menu-select-tab .active:hover:before,
+.topmenu .active:hover:before{
+    width: 0;
+}
+.mb .dropdown-menu li:before,
+.profile .dropdown-menu li:before{
+    background: transparent;
+    z-index: -1;
+}
+.profile .dropdown-menu li:hover,
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus{
+    background-color: #2e6da4;
+    background-image: -webkit-linear-gradient(top, #337ab7 0%, #2e6da4 100%);
+    background-image: -o-linear-gradient(top, #337ab7 0%, #2e6da4 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#337ab7), to(#2e6da4));
+    background-image: linear-gradient(to bottom, #337ab7 0%, #2e6da4 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff2e6da4', GradientType=0);
+    background-repeat: repeat-x;
+    border: 1px solid #2e6da4;
 }
 /*==================================Reponsive==================================*/
 @media only screen and (max-width: 480px){
