--- a/css/style_11-01-2017.css
+++ b/css/style_11-01-2017.css
@@ -11,6 +11,7 @@
     transition: all .27s ease-in-out;
 }
 */
+
 /**********************Flex********************/
 .flex{
 	display: flex;
@@ -78,7 +79,6 @@ body{
     bottom: 0;
     background: url(../images/background/bg.jpg) fixed no-repeat;
     background-size: cover;
-    background-position: right bottom;
 }
 #page-content-wrapper {
     width: 100%;
@@ -99,18 +99,10 @@ body{
 #page-content-wrapper .nav > li.active > a,
 .dropdown-menu > li > a:hover, 
 .dropdown-menu > li > a:focus{
-/*    background: rgba(0,0,0,0.2);*/
-    background: transparent;
+    background: rgba(0,0,0,0.2);
 }
 #page-content-wrapper .nav-tabs > li > a:hover{
     border: 1px solid transparent;
-}
-.warp-content{
-    margin-bottom: 30px;
-    position: relative;
-}
-.warp-content > .tab-content.flex{
-    margin-top: 40px;
 }
 .nopadding{
     padding: 0!important;
@@ -118,17 +110,15 @@ body{
 .nomargin{
     margin: 0 !important;
 }
-.jumpo{
-    margin-top: 0px;
+.warp-content{
 }
+.jumpo{
+    margin-top: 10px;
+}
+
 .topmenu{
-/*    position: relative;*/
-    position: fixed;
-    padding-left:5em;
-    z-index: 3;
-    background: url(../images/background/bg.jpg) fixed no-repeat;
-    background-size: cover;
-    background-position: right bottom;
+    position: relative;
+    padding-left:6em;
 }
 .profile{
     position: absolute;
@@ -136,11 +126,11 @@ body{
     right: 30px;
 }
 .index-left{
-    margin-top: 85px;   
+    margin-top: 105px;   
 }
 .news-events.index-left,
 .corporate-tab.index-left{
-    margin-top: 40px;
+    margin-top: 60px;
 }
 .index-right{
     margin-top: 150px;
@@ -176,20 +166,46 @@ body{
 }
 /*==================================Workspace==================================*/
 .workspace{
-    margin-top: 80px;
+    margin-top: 110px;
+   
 /*    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
 }
 .workspace li p{
-    text-shadow: 0 1px 2px rgba(0,0,0,0.5);
-    font-size: .8em
+        text-shadow: 0 1px 2px rgba(0,0,0,0.5);
 }
 .circle{
-    height: 125px;
+    height: 155px;
     text-align: center;
 }
-.circle-box{
+.circle a{
+    border: 1px solid #fff;
+    color: #fff;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    height: 75px;
+    width: 75px;
+    font-size: 30px;
+    line-height: 72px;
+    display: block;
+    margin: auto;
+    text-decoration: none;
+    -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.5);
+    box-shadow: 0 0 4px rgba(0,0,0,0.5);
+    margin-bottom: 10px;
+     -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
     position: relative;
-    display: inline-block;
+}
+.circle a:hover,
+.contact-box:hover,
+.member-box:hover{
+    background: rgba(255,255,255,0.12);
+    -webkit-box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    box-shadow: 0 0 16px rgba(0,0,0,0.5);
+    cursor: pointer; 
+/*    color: #1B3E93 !important;*/
+     -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
 }
 .noti{
     background: #1B3E93;
@@ -201,9 +217,23 @@ body{
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
 }
 /*==================================Corporate==================================*/
+#corporate{
+/*    background: url(../images/background/bg.jpg) fixed no-repeat;*/
+    position: relative;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+/*    background-position: 100% 100%;*/
+    z-index: 1;
+    min-height: 600px;
+}
+.corporate-tab{
+/*    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+}
 .tab-pane img{
     width: 100%;
 }
@@ -232,18 +262,19 @@ body{
 .system-nav{
     border-bottom: none;
 }
-/*
 .system-nav > li,
 .my-page-nav > li{
     margin-right: -2px;
 }
-*/
 .system-content .panel-group .panel-body{
     border: none !Important;
     padding-left: 1em;
 }
 .system-content .panel .panel-body ul{
     margin:0 0 0 1em;
+}
+.system-content h4.panel-title a{
+    
 }
 /*==================================EVENT==================================*/
 #news-events-ne,
@@ -256,7 +287,7 @@ body{
 }
 #loadMore,
 #loadMore-event{
-    margin: 0.5em 0;
+    margin: 0.5em 0 0;
     padding: 5px 10px;
     border-radius: 0;
     font-size: 17px;
@@ -290,6 +321,9 @@ body{
     font-style: italic;
 }
 /*==================================Employees==================================*/
+#employees>div{
+    
+}
 .icon-user{
     width: 40px;
     height: 40px;
@@ -326,6 +360,17 @@ body{
     text-align: right;
 }
 /*==================================My Page==================================*/
+{
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    margin-top: -13px;
+    border-left: 0;
+    border-bottom: 13px solid transparent;
+    border-top: 13px solid transparent;
+    border-left: 10px solid #5A55A3;
+}
 .my-page-nav{
     border-bottom: none;
 }
@@ -349,6 +394,10 @@ body{
     border: none;
     box-shadow: none;
     color: #fff;
+}
+#my-page .form-control:hover{
+    background: rgba(0,0,0,0.2);
+    z-index: 1
 }
 .my-page-profile span.glyphicon-user{
     width: 120px;
@@ -414,6 +463,11 @@ body{
     background: transparent;
     border: none;
     text-shadow: none;
+    -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
+}
+.html5buttons a:hover{
+    background: rgba(0, 0, 0, 0.25);
     -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out;
 }
@@ -529,17 +583,13 @@ body{
     position: absolute;
     width: 2px;
     height: 60%;
+/*    border-left: 2px soilid #fff;*/
+/*    background: #fff;*/
     background:#fff;
-    left: 5px;
-    top: 70px;
+    left: 20px;
+    top: 60px;
     right: auto;
     bottom: 20px;
-}
-.chartoutside .orgchart > .panel-group > .panel:before{
-    content: "";
-    height: 85%;
-    left: 35px;
-    top: 135px;
 }
 .lv2:before,
 .lv2:after,
@@ -572,11 +622,8 @@ body{
     left: -20px;
     z-index: -1;
 }
-.chartoutside .panel-body .panel:nth-child(n+4) .lv2:after{
-    height: 450%;
-}
 .orgchart .panel-body .panel:last-child .lv2:after{
-    height: 1450%;
+    height: 1500%;
     border-left-color: #fff;
 }
 /*****************************End Chart******************************/
@@ -610,23 +657,33 @@ body{
 /*==================================Directory==================================*/
 .directory,
 .department{
-    margin-top: 2em;
+    margin-top: 3em;
 }
 .directory a : hove{
     text-decoration: none;
 }
+.directory .btn,
 .directory input[type=search],
 .directory .input-group-addon,
 .directory .panel-group .panel,
 .directory .panel-heading,
-.profile .btn,
-.btn-mirror{
+.department .btn{
     background: transparent;
     border: 1px solid #fff;
     border-radius: 0;
     color: #fff;
     -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out;
+}
+.directory .panel-heading:hover,
+ul.result li:hover{
+    background: rgba(0,0,0,0.25);
+    -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
+    cursor: pointer;
+}
+.directory .panel-heading:hover .panel-title a:first-child{
+    color: #19d873 !important;
 }
 .directory .panel-group .panel,
 .directory .panel-heading,
@@ -645,7 +702,10 @@ body{
     border: 1px solid #e7eaec;
     padding: 15px 0;
     margin-bottom: 20px;
-    min-height: 192px;
+    min-height: 150px;
+}
+.contact-box:hover{
+    cursor: auto;
 }
 .contact-box h3{
     margin-top: 0;
@@ -666,6 +726,106 @@ body{
     line-height: 1em;
     text-align: center;
 }
+/*========================================*/
+.contact-icon{
+    text-align: center;
+    margin-top: 5px;
+}
+.contact-icon a {
+    display: inline-block;
+    font-size: 0px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+    background: rgba(255,255,255,0.1);
+	-webkit-transition: -webkit-transform ease-out 0.1s, background 0.2s;
+	-moz-transition: -moz-transform ease-out 0.1s, background 0.2s;
+	transition: transform ease-out 0.1s, background 0.2s;
+}
+.contact-icon a:after {
+    top: 0;
+    left: 0;
+    padding: 0;
+    z-index: -1;
+    box-shadow: 0 0 0 2px rgba(255,255,255,0.1);
+    opacity: 0;
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    content: '';
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+.contact-icon a:hover {
+	background: rgba(255,255,255,0.05);
+	-webkit-transform: scale(0.93);
+	-moz-transform: scale(0.93);
+	-ms-transform: scale(0.93);
+	transform: scale(0.93);
+	color: #fff;
+}
+
+.contact-icon a:hover:after {
+	-webkit-animation: sonarEffect 1.3s ease-out 75ms;
+	-moz-animation: sonarEffect 1.3s ease-out 75ms;
+	animation: sonarEffect 1.3s ease-out 75ms;
+}
+
+@-webkit-keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		-webkit-transform: scale(1.5);
+		opacity: 0;
+	}
+}
+@-moz-keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		-moz-transform: scale(1.5);
+		opacity: 0;
+	}
+}
+@keyframes sonarEffect {
+	0% {
+		opacity: 0.3;
+	}
+	40% {
+		opacity: 0.5;
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+	}
+	100% {
+		box-shadow: 0 0 0 2px rgba(255,255,255,0.1), 0 0 10px 10px #0555d0, 0 0 0 10px rgba(255,255,255,0.5);
+		transform: scale(1.5);
+		opacity: 0;
+	}
+}
+/*========================================*/
 .contact-icon a .fa{
     font-size: 20px;
     line-height: 30px;
@@ -687,6 +847,7 @@ p.contact-phone{
     -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out
 }
+
 .contact-box p .fa{
     width: 20px;
 }
@@ -697,9 +858,8 @@ p.contact-phone{
     font-size: 12px;
 }
 .result-box{
-    background: rgba(0,0,0,0.25);
+    background: rgba(0,0,0,0.25);;
     padding: 15px 0 10px;
-    overflow: hidden;
 }
 ul.result li{
     padding-left: 1em;
@@ -716,6 +876,9 @@ ul.result a{
     padding: 0 40px 0 30px;
 }
 /*==================================Department==================================*/
+.department{
+    
+}
 .department .contact-box{
     border: none;
 }
@@ -744,6 +907,11 @@ ul.result a{
 .member-box .contact-box{
     min-height: auto;
 }
+.member-box .contact-box:hover{
+    background: none;
+    box-shadow: none;
+    cursor: auto;
+}
 .member-box h4{
     padding-left: 2em;
 }
@@ -755,7 +923,6 @@ ul.result a{
 }
 .department-select-center .dropdown .dropdown-toggle{
     font-size: 20px;
-    width: 250px;
 }
 .functions-box{
     padding-bottom: 1.5em;
@@ -765,6 +932,9 @@ ul.result a{
 }
 .style-disc{
     list-style: disc;
+}
+.style-disc li{
+
 }
 .style-disc li span{
     margin-left: 3px;
@@ -880,9 +1050,6 @@ footer  a:after{
      .directory .text-right{
         text-align: left;
     }
-    .directory-select .text-right{
-        text-align: right;
-    }
 /***********************************/
     .map-local{
         height: 300px
@@ -892,6 +1059,9 @@ footer  a:after{
     }
 }
 @media only screen and (max-width: 768px){
+    .flex{
+        
+    }
     .slidebarleft-bg{
         display: block;
         background: url(../images/background/bg.jpg);
@@ -903,9 +1073,6 @@ footer  a:after{
         border-color: #080808;
         box-shadow: 0 0 5px rgba(0,0,0,.8);
     }
-    .warp-content{
-        margin-bottom: 0;
-    }
     .workspace{
         margin-top: 4em;
     }
@@ -914,6 +1081,13 @@ footer  a:after{
     }
     .my-page-nav.mb li.dropdown{
         margin-bottom: 0;
+    }
+    .my-page-content{
+/*
+        padding: 15px;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.25);
+*/
     }
     .my-page-content form .form-inline button{
         display: block;
@@ -926,11 +1100,9 @@ footer  a:after{
         top: 5px;
     }
     .topmenu{
-        position: relative;
         padding-left: 10px;
-        margin:3em -15px 0;
+        margin-top: 3em;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        z-index: inherit;
     }
     .topmenu ul li{
         width: 100%;
@@ -1014,9 +1186,6 @@ footer  a:after{
     .contact-img img{
         display: inline-block;
     }
-    .result-box .mCustomScrollbar{
-        height: 210px !important;
-    }
     .directory-search, .directory-select{
         height: auto;
         margin: 1em 0;
@@ -1053,6 +1222,11 @@ footer  a:after{
         -webkit-transition: all .27s ease-in-out;
         transition: all .27s ease-in-out;
     }
+/*
+    .member-box h4{
+        padding-left: 2em;
+    }
+*/
     .member-box h4:after{
         content: "";
         height: 1px;
@@ -1066,10 +1240,6 @@ footer  a:after{
     }
     .label-control{
         display: none;
-    }
-    .chartoutside center h3,
-    .documentoutside center h3{
-        margin-top: 2em;
     }
     footer{
        margin-top: 1em; 
