--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "../css/leftmenu.css";
 @import "../css/CustomScrollbar.css";
 @import "../css/datatables.min.css";
+@import "../css/svg-amination.css";
 @charset "utf-8";
 /* CSS Document */
 
