--- a/css/hover.css
+++ b/css/hover.css
@@ -369,3 +369,71 @@ ul.result li:before{
 		opacity: 1;
 	}
 }
+/*==================================Btn FeedBack==================================*/
+.feedback{
+    z-index: 1000;
+    position: fixed;
+    bottom: 5%;
+    right: 0;
+    overflow: hidden;
+}
+.btn-feedback {
+    background: #f06060;
+	color: #fff;
+/*
+    border: 1px solid #fff;
+    border-radius: 6px 0 0 6px;
+    box-shadow: 0 6px #ab3c3c;
+*/
+    border-radius: 6px 0 0 0;
+    border-bottom: solid 5px #cb4e4e;
+    display: block;
+    font-size: 16px;
+    width: 40px;
+    padding: 6px 0 5px;
+    text-align: center;
+	overflow: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
+    -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.btn-feedback span {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	-webkit-transition: all 0.8s;
+	-webkit-backface-visibility: hidden;
+	-moz-transition: all 0.8s;
+	-moz-backface-visibility: hidden;
+	transition: all 0.8s;
+	backface-visibility: hidden;
+}
+.btn-feedback:before {
+    content: "Feedback";
+    font-style: italic;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+    left: -200%;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.btn-feedback:hover{
+    width: 120px;
+    -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.btn-feedback:hover span {
+	-webkit-transform: translateX(200%);
+	-moz-transform: translateX(200%);
+	-ms-transform: translateX(200%);
+	transform: translateX(200%);
+}
+.btn-feedback:hover:before {
+	left: 0;
+}
