--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body{
     position: relative;
 }
 .warp-content > .tab-content.flex{
-    margin-top: 40px;
+    margin-top: 50px;
 }
 .nopadding{
     padding: 0!important;
@@ -128,15 +128,19 @@ body{
     top: 0;
     left: 0;
     right: 0;
-    padding: 10px 0 12px 5em;
+    padding: 20px 0 22px 5em;
     z-index: 3;
     background: url(../images/background/bg.jpg) fixed no-repeat;
     background-size: cover;
     background-position: right bottom;
 }
+.logo-back{
+    position: fixed;
+    left: 6em;
+}
 .profile{
     position: absolute;
-    top: 8px;
+    top: 18px;
     right: 30px;
 }
 .index-left{
@@ -248,6 +252,10 @@ body{
 }
 .system-content .panel .panel-body ul{
     margin:0 0 0 1em;
+}
+.documentoutside,
+.chartoutside{
+    margin-top: 1em;
 }
 /*==================================EVENT==================================*/
 #news-events-ne,
@@ -614,7 +622,7 @@ body{
 /*==================================Directory==================================*/
 .directory,
 .department{
-    margin-top: 2em;
+    margin-top: 3em;
 }
 .directory a : hove{
     text-decoration: none;
@@ -898,9 +906,9 @@ footer  a:after{
     .my-page-profile > div{
         padding-top: 20px !important;
     }
-/***********************************/
-    #leave-record{
-        overflow: auto;
+/***********************************/ 
+    .btn-request{
+        font-size: 11px;
     }
 /***********************************/ 
     .html5buttons {
@@ -945,9 +953,10 @@ footer  a:after{
 }
 @media only screen and (max-width: 768px){
     .slidebarleft-bg{
-        display: block;
+        display: none;
         background: url(../images/background/bg.jpg);
-        position: fixed;
+/*        position: fixed;*/
+        position: absolute;
         top: 0;
         width: 100%;
         height: 42px;
@@ -971,27 +980,50 @@ footer  a:after{
         display: block;
         text-align: right;
     }
+    /******************** Fix leave record Data Table show********************/
+    #leave-record,
+    #my-page{
+        width: 100%;
+        display: block;
+        height: 0;
+        overflow: hidden;
+    }
+    #leave-record.active,
+    #my-page.active{
+        height: auto;
+    }
+     /******************** /Fix leave record Data Table show********************/
     .index-left{
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
     .hamburger{
         top: 5px;
+        position: absolute;
     }
     .topmenu{
         position: relative;
-        padding-left: 10px;
+        padding: 10px 0;
         margin:3em -15px 0;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         z-index: inherit;
+    }
+    .topmenu .nav-pills > li + li{
+        margin-left:0;
     }
     .topmenu ul li{
         width: 100%;
     }
     .profile{
+/*
         top:4px;
         right: 15px;
-        z-index: 998;
         position: fixed;
+*/
+        top: -53px;
+        right: 0;
+        z-index: 998;
+        position: absolute;
+        
     }
     .profile .dropdown-menu{
         right: 0;
@@ -1073,6 +1105,9 @@ footer  a:after{
         height: auto;
         margin: 1em 0;
     }
+    .functions-box{
+        height: auto !important;
+    }
     .directory-select:before{
         margin: 2em 0 1em;
     }
@@ -1118,6 +1153,10 @@ footer  a:after{
     }
     .label-control{
         display: none;
+    }
+    .documentoutside, 
+    .chartoutside{
+        margin-top: 0;
     }
     .chartoutside center h3,
     .documentoutside center h3{
