--- a/css/svg-amination.css
+++ b/css/svg-amination.css
@@ -110,6 +110,7 @@ svg {
 .line-drawing path {
 	fill: none;
 	stroke: white;
+/*    stroke: #5FCCF5;*/
 	stroke-width: 1;
 }
 @media only screen and (max-width: 1200px){
