--- a/css/hover _old.css
+++ b/css/hover _old.css
@@ -39,8 +39,8 @@
     display: inline-block;
     font-size: 0px;
     cursor: pointer;
-    width: 23px;
-    height: 23px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     text-align: center;
     position: relative;
@@ -128,30 +128,24 @@
 	}
 }
 /*========================================*/
-.member-box > div:hover{
-    background: rgba(0 ,0 ,0 ,0.25);
-    -webkit-transition: all .27s ease-in-out;
-     transition: all .27s ease-in-out;
-}
+
 /*==================================Hover==================================*/
-/*.member-box > div,
-.nav-tabs li,*/
+.member-box > div,
 .btn,
+.nav-tabs li,
 .directory .panel-group .panel-heading,
 ul.result li,
 #menu-select-tab li,
 .noti{
     -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
      transition: all .27s ease-in-out;
 }
 .member-box > div{
     margin-top: 2px;
 }
 /*************************************/
-/*.member-box > div:before,
-.nav-tabs li:before,*/
+.member-box > div:before,
+.nav-tabs li:before,
 .directory .panel-group .panel-heading:before,
 ul.result li:before{
     content: "";
@@ -161,30 +155,26 @@ ul.result li:before{
     background: rgba(0 ,0 ,0 ,0.25);
     position: absolute;
     -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
      transition: all .27s ease-in-out;
 }
-/*.member-box > div:hover:before,*/
-/*.nav-tabs li:hover:before,******mytab-document nav**********/
-/*.nav-tabs li.active:before,******mytab-document nav**********/
+.member-box > div:hover:before,
+.nav-tabs li:hover:before,/*******mytab-document nav**********/
+.nav-tabs li.active:before,/*******mytab-document nav**********/
 .directory .panel-group .panel-heading:hover:before,
 ul.result li:hover:before,
 .sidebarleft-nav li:hover:before{
      -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
      transition: all .27s ease-in-out;
      width: 100%;
 }
 .directory .panel-group .panel-heading:before{
-    height: 35px;
+    height: 40px;
     z-index: -1;
     left: 0;
     margin-top: -12px;
 }
 ul.result li:before{
-    height: 25px;
+    height: 27px;
     z-index: -1;
 }
 /****************Menu Top Tabs*********************/
@@ -205,8 +195,6 @@ ul.result li:before{
     background: #5FCCF5;
     position: absolute;
     -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
      transition: all .27s ease-in-out;
 }
 .topmenu ul > li.active:before,
@@ -220,19 +208,6 @@ ul.result li:before{
 #menu-select-tab li a{
     padding: 0;
     position: relative;
-    color: #cdcdcd;
-    -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
-     transition: all .27s ease-in-out;
-}
-#menu-select-tab li:hover a,
-#menu-select-tab li.active a{
-    color: #fff;
-    -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
-     transition: all .27s ease-in-out;
 }
 #menu-select-tab li a:after{
     content: '';
@@ -243,8 +218,6 @@ ul.result li:before{
     background: #5FCCF5 ;
     position: absolute;
     -webkit-transition: all .27s ease-in-out;
-    -moz-transition: all .27s ease-in-out;
-    -o-transition: all .27s ease-in-out;
      transition: all .27s ease-in-out;
 }
 #menu-select-tab li.active a:after,
@@ -263,33 +236,45 @@ ul.result li:before{
 	height: 0;
 	top: 50%;
 	left: 50%;
-	background: rgba(255, 255, 255, 1);
+	background: #fff;
+	opacity: 0;
     z-index: -1;
     position: absolute;
-	opacity: .5;
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
-    -webkit-transition: all 0.75s ease 0s;
-	-moz-transition: all 0.75s ease 0s;
-	-o-transition: all 0.75s ease 0s;
-	transition: all 0.75s ease 0s;
+	-webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	-moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	-ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    -webkit-transition: all .27s ease-in-out;
+     transition: all .27s ease-in-out;
 }
 .btn-mirror:hover,
 .btn-mirror:active,
 .btn-mirror:focus,
 .btn-mirror:visited{
 	color: #888 !important;
-    -webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
 }
-.btn-mirror:hover:before,
-.btn-mirror:active:before{
-	height: 110%;
+.btn-mirror:hover:before {
+	height: 550%;
 	opacity: 1;
+}
+.btn-mirror.dropdown-toggle:hover:before {
+	height: 400%;
+}
+.btn-mirror:active:before {
+	height: 600%;
+	opacity: 1;
+}
+#loadMore:hover:before
+{
+    height: 200%;
+}
+.directory-select .btn-mirror:hover:before
+{
+    height: 175%;
+}
+.send-email:hover:before,
+.btn-request:hover:before{
+    height: 255%;
 }
 /*************************************/
 .mb .dropdown-menu li:before,
@@ -316,15 +301,16 @@ ul.result li:before{
     width: 75px;
     display: inline-block;
     color: #fff;
+     -webkit-transition: all .27s ease-in-out;
+    transition: all .27s ease-in-out;
     position: relative;
     z-index: 1;
     overflow: hidden;
     -webkit-box-shadow: 0 0 0 1px rgba(255,255,255,1);
     box-shadow: 0 0 0 1px rgba(255,255,255,1);
-	-webkit-transition: background 0.5s, color 0.5s, box-shadow 0.5s;
-	-moz-transition: background 0.5s, color 0.5s, box-shadow 0.5s;
-    -o-transition: background 0.5s, color 0.5s, box-shadow 0.5s;
-	transition: background 0.5s, color 0.5s, box-shadow 0.5s;
+	-webkit-transition: background 0.3s, color 0.3s, box-shadow 0.3s;
+	-moz-transition: background 0.3s, color 0.3s, box-shadow 0.3s;
+	transition: background 0.3s, color 0.3s, box-shadow 0.3s;
 }
 .circle a:before {
 	speak: none;
@@ -343,9 +329,9 @@ ul.result li:before{
 	box-shadow: 0 0 0 8px rgba(255,255,255,0.3);
 }
 .circle a:hover:before {
-	-webkit-animation: toRightFromLeft 0.5s forwards;
-	-moz-animation: toRightFromLeft 0.5s forwards;
-	animation: toRightFromLeft 0.5s forwards;
+	-webkit-animation: toRightFromLeft 0.3s forwards;
+	-moz-animation: toRightFromLeft 0.3s forwards;
+	animation: toRightFromLeft 0.3s forwards;
 }
 @-webkit-keyframes toRightFromLeft {
 	49% {
