--- a/css/leftmenu.css
+++ b/css/leftmenu.css
@@ -61,6 +61,9 @@
 .sidebarleft-nav ul li {
     line-height: 2em;
 }
+.sidebarleft-nav ul li a{
+    font-size: .9em;
+}
 .sidebarleft-nav li:not(.sidebarleft-brand):before {
     background: #1c1c1c;
     background: rgba(255,255,255,0.2);
@@ -81,6 +84,7 @@
     display: block;
     text-decoration: none;
     color: #999999;
+    font-size: 1.2em;
      -webkit-transition: all .27s ease-in-out;
     transition: all .27s ease-in-out;
 }
@@ -93,9 +97,11 @@
     transition: all .27s ease-in-out;
 }
 */
+.sidebarleft-nav li a:hover,
 .sidebarleft-nav li a:active,
 .sidebarleft-nav li a:focus {
-    text-decoration: none;
+     text-decoration: none;
+     color: #fff;
 }
 .sidebarleft-nav > .sidebarleft-brand {
     height: 65px;
@@ -176,66 +182,66 @@
 /*       Hamburger-Cross         */
 /*-------------------------------*/
 .hamburger {
-  background: transparent;
-  border: none;
-  display: block;
-  height: 32px;
-  margin-left: 30px;
-  position: fixed;
-/*  position: absolute;*/
-  top: 20px;
-  width: 32px;
-  z-index: 999;
+    background: transparent;
+    border: none;
+    display: block;
+    height: 32px;
+    margin-left: 30px;
+    position: fixed;
+    /*  position: absolute;*/
+    top: 20px;
+    width: 32px;
+    z-index: 999;
 }
 .hamburger:hover {
-  outline: none;
+    outline: none;
 }
 .hamburger:focus {
-  outline: none;
+    outline: none;
 }
 .hamburger:active {
-  outline: none;
+    outline: none;
 }
 .hamburger.is-closed:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  color: #ffffff;
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 0;
-  text-align: center;
-  width: 100px;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transition: all 0.35s ease-in-out;
+    color: #ffffff;
+    content: '';
+    display: block;
+    font-size: 14px;
+    line-height: 32px;
+    opacity: 0;
+    text-align: center;
+    width: 100px;
 }
 .hamburger.is-closed:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
+    -webkit-transform: translate3d(-100px, 0, 0);
+    -webkit-transition: all 0.35s ease-in-out;
+    display: block;
+    opacity: 1;
 }
 .hamburger.is-closed:hover .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  top: 0;
+    -webkit-transition: all 0.35s ease-in-out;
+    top: 0;
 }
 .hamburger.is-closed:hover .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  bottom: 0;
+    -webkit-transition: all 0.35s ease-in-out;
+    bottom: 0;
 }
 .hamburger.is-closed .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: rgba(255, 255, 255, 0.7);
-  top: 5px;
+    -webkit-transition: all 0.35s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.7);
+    top: 5px;
 }
 .hamburger.is-closed .hamb-middle {
-  background-color: rgba(255, 255, 255, 0.7);
-  margin-top: -2px;
-  top: 50%;
+    background-color: rgba(255, 255, 255, 0.7);
+    margin-top: -2px;
+    top: 50%;
 }
 .hamburger.is-closed .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: rgba(255, 255, 255, 0.7);
-  bottom: 5px;
+    -webkit-transition: all 0.35s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.7);
+    bottom: 5px;
 }
 .hamburger.is-closed .hamb-top,
 .hamburger.is-closed .hamb-middle,
@@ -243,59 +249,61 @@
 .hamburger.is-open .hamb-top,
 .hamburger.is-open .hamb-middle,
 .hamburger.is-open .hamb-bottom {
-  height: 4px;
-  left: 0;
-  position: absolute;
-  width: 100%;
+    height: 4px;
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
 .hamburger.is-open .hamb-top {
-  -webkit-transform: rotate(45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: #fff;
-  margin-top: -2px;
-  top: 50%;
+    -webkit-transform: rotate(45deg);
+    -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+    background-color: #fff;
+    margin-top: -2px;
+    top: 50%;
+    opacity: 0;
 }
 .hamburger.is-open .hamb-middle {
-  background-color: #fff;
-  display: none;
+    background-color: #fff;
+    display: none;
 }
 .hamburger.is-open .hamb-bottom {
-  -webkit-transform: rotate(-45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: #fff;
-  margin-top: -2px;
-  top: 50%;
+    -webkit-transform: rotate(-45deg);
+    -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+    background-color: #fff;
+    margin-top: -2px;
+    top: 50%;
+    opacity: 0;
 }
 .hamburger.is-open:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  color: #ffffff;
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 0;
-  text-align: center;
-  width: 100px;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transition: all 0.35s ease-in-out;
+    color: #ffffff;
+    content: '';
+    display: block;
+    font-size: 14px;
+    line-height: 32px;
+    opacity: 0;
+    text-align: center;
+    width: 100px;
 }
 .hamburger.is-open:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
+    -webkit-transform: translate3d(-100px, 0, 0);
+    -webkit-transition: all 0.35s ease-in-out;
+    display: block;
+    opacity: 1;
 }
 /*-------------------------------*/
 /*          Dark Overlay         */
 /*-------------------------------*/
 .overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 999;
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 999;
 }
